@@ -106,7 +106,9 @@ void GFX_OpenGLRedrawScreen(void);
 #include "inout.h"
 #include "../ints/int10.h"
 #if !defined(HX_DOS)
+#if !defined(__MINGW32__) || defined(__MINGW64_VERSION_MAJOR)
 #include "whereami.c"
+#endif
 #include "../libs/tinyfiledialogs/tinyfiledialogs.h"
 #endif
 #if defined(USE_TTF)
@@ -1021,7 +1023,7 @@ void CPU_Core_Dyn_X86_Shutdown(void);
 std::string dosboxpath="";
 std::string GetDOSBoxXPath() {
     std::string full;
-#if defined(HX_DOS)
+#if defined(HX_DOS) || defined(__MINGW32__) && !defined(__MINGW64_VERSION_MAJOR)
     char exepath[MAX_PATH];
     GetModuleFileName(NULL, exepath, sizeof(exepath));
     full=std::string(exepath);
@@ -4302,7 +4304,7 @@ void GFX_EndTextLines(bool force=false) {
 		newAC += ttf.cols;
 	}
     if (!force) justChanged = false;
-#if 1 // NTS: Additional fix is needed for PC-98 mode; also expect further cleanup
+    // NTS: Additional fix is needed for the cursor in PC-98 mode; also expect further cleanup
 	bcount++;
 	if (vga.draw.cursor.enabled && vga.draw.cursor.sline <= vga.draw.cursor.eline && vga.draw.cursor.sline < 16) {		// Draw cursor?
 		int newPos = vga.draw.cursor.address>>1;
@@ -4374,7 +4376,6 @@ void GFX_EndTextLines(bool force=false) {
 			}
 		}
 	}
-#endif
 	if (xmin <= xmax) {												// if any changes
         SDL_Rect *rect = &sdl.updateRects[0];
         rect->x = ttf.offX+xmin*ttf.width; rect->y = ttf.offY+ymin*ttf.height; rect->w = (xmax-xmin+1)*ttf.width; rect->h = (ymax-ymin+1)*ttf.height;
@@ -12564,8 +12565,8 @@ int main(int argc, char* argv[]) SDL_MAIN_NOEXCEPT {
                     memset(&b, 0, sizeof(b));
                     b.iId = ID_WIN_SYSMENU_MAPPER;
                     b.hIcon = LoadIcon(GetModuleHandle(NULL), MAKEINTRESOURCE(IDI_MAPPER));
-                    b.dwMask = THB_TOOLTIP | THB_FLAGS | THB_ICON;
-                    b.dwFlags = THBF_ENABLED | THBF_DISMISSONCLICK;
+                    b.dwMask = (THUMBBUTTONMASK)(THB_TOOLTIP | THB_FLAGS | THB_ICON);
+                    b.dwFlags = (THUMBBUTTONFLAGS)(THBF_ENABLED | THBF_DISMISSONCLICK);
                     wcscpy(b.szTip, L"Mapper editor");
                 }
 
@@ -12574,8 +12575,8 @@ int main(int argc, char* argv[]) SDL_MAIN_NOEXCEPT {
                     memset(&b, 0, sizeof(b));
                     b.iId = ID_WIN_SYSMENU_CFG_GUI;
                     b.hIcon = LoadIcon(GetModuleHandle(NULL), MAKEINTRESOURCE(IDI_CFG_GUI));
-                    b.dwMask = THB_TOOLTIP | THB_FLAGS | THB_ICON;
-                    b.dwFlags = THBF_ENABLED | THBF_DISMISSONCLICK;
+                    b.dwMask = (THUMBBUTTONMASK)(THB_TOOLTIP | THB_FLAGS | THB_ICON);
+                    b.dwFlags = (THUMBBUTTONFLAGS)(THBF_ENABLED | THBF_DISMISSONCLICK);
                     wcscpy(b.szTip, L"Configuration tool");
                 }
 
@@ -12583,8 +12584,8 @@ int main(int argc, char* argv[]) SDL_MAIN_NOEXCEPT {
                     THUMBBUTTON &b = buttons[buttoni++];
                     memset(&b, 0, sizeof(b));
                     b.iId = 1;
-                    b.dwMask = THB_FLAGS;
-                    b.dwFlags = THBF_DISABLED | THBF_NONINTERACTIVE | THBF_NOBACKGROUND;
+                    b.dwMask = (THUMBBUTTONMASK)THB_FLAGS;
+                    b.dwFlags = (THUMBBUTTONFLAGS)(THBF_DISABLED | THBF_NONINTERACTIVE | THBF_NOBACKGROUND);
                 }
 
                 {
@@ -12592,8 +12593,8 @@ int main(int argc, char* argv[]) SDL_MAIN_NOEXCEPT {
                     memset(&b, 0, sizeof(b));
                     b.iId = ID_WIN_SYSMENU_PAUSE;
                     b.hIcon = LoadIcon(GetModuleHandle(NULL), MAKEINTRESOURCE(IDI_PAUSE));
-                    b.dwMask = THB_TOOLTIP | THB_FLAGS | THB_ICON;
-                    b.dwFlags = THBF_ENABLED;
+                    b.dwMask = (THUMBBUTTONMASK)(THB_TOOLTIP | THB_FLAGS | THB_ICON);
+                    b.dwFlags = (THUMBBUTTONFLAGS)THBF_ENABLED;
                     wcscpy(b.szTip, L"Pause emulation");
                 }
 
